# ComfyUI-Hunyuan3DWrapper

./: .gitignore  __init__.py  nodes.py  pyproject.toml  readme.md  requirements.txt  requirements_extras.txt  utils.py
configs/: dit_config.yaml  dit_config_mini_turbo.yaml
example_workflows/: hy3d_example_01.json  hy3d_multiview_example_01.json  hy3d_multiview_example_02.json  hy3dtest.json
hy3dgen/shapegen/: __init__.py  pipelines.py  postprocessors.py  preprocessors.py  schedulers.py
hy3dgen/shapegen/bpt/: README.md  requirements.txt  shapevae-256.yaml  utils.py
hy3dgen/shapegen/bpt/miche/: encode.py
hy3dgen/shapegen/bpt/model/: data_utils.py  miche_conditioner.py  model.py  serializaiton.py
hy3dgen/shapegen/models/: conditioner.py  hunyuan3ddit.py  vae.py
hy3dgen/shapegen/models/autoencoders/: model.py  surface_extractors.py  volume_decoders.py
hy3dgen/texgen/: pipelines.py
hy3dgen/texgen/custom_rasterizer/: setup.py
hy3dgen/texgen/custom_rasterizer/custom_rasterizer.egg-info/: PKG-INFO  SOURCES.txt
hy3dgen/texgen/differentiable_renderer/: blender_render.py  camera_utils.py  mesh_processor.cp312-win_amd64.pyd  mesh_processor.py  mesh_render.py  setup.py
hy3dgen/texgen/hunyuanpaint/: pipeline.py
hy3dgen/texgen/utils/: dehighlight_utils.py  uv_warp_utils.py
web/js/: jsnodes.js
wheels/: custom_rasterizer-0.1-cp312-cp312-win_amd64.whl  custom_rasterizer-0.1.0+torch260.cuda126-cp312-cp312-win_amd64.whl  custom_rasterizer-0.1.0+torch270.cuda128-cp312-cp312-win_amd64.whl  mesh_processor-0.0.0-cp312-cp312-win_amd64.whl
(+11 files in other folders)
